--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/antd/dist/antd.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="fadecontent"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
